[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://Character.tscn" type="PackedScene" id=7]
[ext_resource path="res://Wizzard.gd" type="Script" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 480.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 240, 450 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath" type="Path2D" parent="."]
editor/display_folded = true
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 480, 0 )
rotation = 1.5708

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 240, 386 )
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 240, 386 )
stream = ExtResource( 6 )

[node name="Character" parent="." instance=ExtResource( 7 )]
position = Vector2( 30, 30 )
script = ExtResource( 8 )

[node name="Hat" type="ColorRect" parent="Character"]
margin_right = 40.0
margin_bottom = 20.0
color = Color( 1, 0.0117647, 0.0117647, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
margin_right = 180.0
margin_bottom = 140.0
alignment = 1

[node name="ShowInterstitialButton" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 36.0
margin_right = 180.0
margin_bottom = 56.0
text = "Interstitial"

[node name="ShowBannerButton" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 60.0
margin_right = 180.0
margin_bottom = 80.0
text = "Banner"

[node name="ShowVideoButton" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 84.0
margin_right = 180.0
margin_bottom = 104.0
text = "Video"

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="show_interstitial" from="HUD" to="." method="_on_HUD_show_interstitial"]
[connection signal="start_game" from="HUD" to="." method="start_game"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ShowInterstitialButton" to="." method="_on_ShowInterstitialButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ShowBannerButton" to="." method="_on_ShowBannerButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ShowVideoButton" to="." method="_on_ShowVideoButton_pressed"]
